links of the exercises

--- a/GA_with_KG.ipynb
+++ b/GA_with_KG.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGmk3hjFUFaunyn2LGVqSS",
+      "authorship_tag": "ABX9TyNdCktJeZ1xDo70jLWj3wBK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,94 +27,33 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "import random\n",
-        "\n",
-        "# Define possible attributes\n",
-        "difficulties = [\"Easy\", \"Medium\", \"Hard\"]\n",
-        "chapters = [\"Chapter 1\", \"Chapter 2\", \"Chapter 3\", \"Chapter 4\"]\n",
-        "max_points = 20  # Adjust as needed\n",
-        "\n",
-        "# Generate exercises\n",
-        "exercises = []\n",
-        "exercise_id = 1\n",
-        "\n",
-        "for _ in range(1000):\n",
-        "    exercise = {\n",
-        "        \"id\": exercise_id,\n",
-        "        \"name\": f\"Exercise {exercise_id}\",\n",
-        "        \"difficulty\": random.choice(difficulties),\n",
-        "        \"points\": random.randint(1, max_points),\n",
-        "        \"chapter\": random.choice(chapters)\n",
-        "    }\n",
-        "    exercises.append(exercise)\n",
-        "    exercise_id += 1\n",
-        "\n",
-        "# Print a few exercises for verification\n",
-        "for exercise in exercises[:5]:\n",
-        "    print(exercise)\n"
+        "GA KG"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SV8MD31Mnt7r",
-        "outputId": "848172ca-fd05-423e-b6de-dd42a0981743"
-      },
+        "id": "4PoU6519cipF"
+      }
+    },
+    {
+      "cell_type": "code",
       "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'id': 1, 'name': 'Exercise 1', 'difficulty': 'Easy', 'points': 8, 'chapter': 'Chapter 2'}\n",
-            "{'id': 2, 'name': 'Exercise 2', 'difficulty': 'Medium', 'points': 10, 'chapter': 'Chapter 4'}\n",
-            "{'id': 3, 'name': 'Exercise 3', 'difficulty': 'Medium', 'points': 9, 'chapter': 'Chapter 1'}\n",
-            "{'id': 4, 'name': 'Exercise 4', 'difficulty': 'Easy', 'points': 7, 'chapter': 'Chapter 4'}\n",
-            "{'id': 5, 'name': 'Exercise 5', 'difficulty': 'Medium', 'points': 2, 'chapter': 'Chapter 2'}\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "\n",
-        "# Assuming 'exercises' is the list of exercises generated\n",
-        "\n",
-        "# Create a DataFrame from the list of exercises\n",
-        "df = pd.DataFrame(exercises)\n",
-        "\n",
-        "# Export the DataFrame to an Excel file\n",
-        "df.to_excel('exercises_data.xlsx', index=False)\n"
-      ],
-      "metadata": {
-        "id": "nimzQRH6nxmx"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9fSwChk-nnrH",
-        "outputId": "c0b12c97-f445-43ff-d753-143615d919f6"
+        "outputId": "c7cc19e2-31ef-4eff-a323-814f1e96ee86"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Exercise: Exercise 243, Chapter: Chapter 2, Points: 5, Difficulty: Easy\n",
-            "Exercise: Exercise 14, Chapter: Chapter 3, Points: 9, Difficulty: Medium\n",
-            "Exercise: Exercise 468, Chapter: Chapter 1, Points: 1, Difficulty: Easy\n",
-            "Exercise: Exercise 269, Chapter: Chapter 4, Points: 5, Difficulty: Medium\n",
+            "Exercise: Exercise 673, Chapter: Chapter 1, Points: 3, Difficulty: Medium, Link: https://drive.google.com/file/d/1pkFaRYgnQZ-C9ourjnv6T5fk4zTuR_78/view?usp=drive_link\n",
+            "Exercise: Exercise 805, Chapter: Chapter 2, Points: 8, Difficulty: Medium, Link: https://drive.google.com/file/d/1pVH3SIk0uMxwXtVCiNFt0QXCX8Th4YJN/view?usp=drive_link\n",
+            "Exercise: Exercise 260, Chapter: Chapter 3, Points: 8, Difficulty: Easy, Link: https://drive.google.com/file/d/1d9cJLyNbFvJF1w6_wwHB_Mu1cwuG0x87/view?usp=drive_link\n",
+            "Exercise: Exercise 473, Chapter: Chapter 4, Points: 1, Difficulty: Medium, Link: https://drive.google.com/file/d/1QeSeULruQJu48H4kSZWi5-v0j2BpAq2Z/view?usp=drive_link\n",
             "Total Points: 20\n"
           ]
         }
@@ -124,7 +63,7 @@
         "import random\n",
         "\n",
         "# Read exercise data from Excel file\n",
-        "df = pd.read_excel('/content/exercises_data.xlsx')\n",
+        "df = pd.read_excel('/content/exercise_data.xlsx')\n",
         "\n",
         "# Define the target criteria\n",
         "target_points = 20\n",
@@ -194,7 +133,7 @@
         "\n",
         "# Print the selected exercises\n",
         "for exercise in exam_paper:\n",
-        "    print(f\"Exercise: {exercise['name']}, Chapter: {exercise['chapter']}, Points: {exercise['points']}, Difficulty: {exercise['difficulty']}\")\n",
+        "    print(f\"Exercise: {exercise['name']}, Chapter: {exercise['chapter']}, Points: {exercise['points']}, Difficulty: {exercise['difficulty']}, Link: {exercise['link']}\")\n",
         "\n",
         "print(f\"Total Points: {sum(exercise['points'] for exercise in exam_paper)}\")\n"
       ]
