added the pdf merger

--- a/GA_with_KG.ipynb
+++ b/GA_with_KG.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdCktJeZ1xDo70jLWj3wBK",
+      "authorship_tag": "ABX9TyO68dr4yvc9M8cC5P6u616m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,33 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/lynaBoukari/Coding4Integrity/blob/main/GA_with_KG.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install pyPDF2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l23LjCHqwQCp",
+        "outputId": "731d4da4-2af5-4e49-b8fd-4e0b9e2a771d"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting pyPDF2\n",
+            "  Downloading pypdf2-3.0.1-py3-none-any.whl (232 kB)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/232.6 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━\u001b[0m \u001b[32m225.3/232.6 kB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m232.6/232.6 kB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: pyPDF2\n",
+            "Successfully installed pyPDF2-3.0.1\n"
+          ]
+        }
       ]
     },
     {
@@ -137,6 +164,46 @@
         "\n",
         "print(f\"Total Points: {sum(exercise['points'] for exercise in exam_paper)}\")\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import PyPDF2\n",
+        "import requests\n",
+        "\n",
+        "\n",
+        "# Output PDF file\n",
+        "output_pdf = 'collage.pdf'\n",
+        "\n",
+        "# Initialize PDF merger\n",
+        "pdf_merger = PyPDF2.PdfMerger()\n",
+        "\n",
+        "# Merge the exercise PDFs into the output PDF\n",
+        "for exercise in exam_paper:\n",
+        "    pdf_link = exercise['link']\n",
+        "    try:\n",
+        "        # Download the PDF file from the URL\n",
+        "        response = requests.get(pdf_link)\n",
+        "        response.raise_for_status()  # Raise an exception if download fails\n",
+        "        with open('temp.pdf', 'wb') as temp_file:\n",
+        "            temp_file.write(response.content)\n",
+        "\n",
+        "        # Append the downloaded PDF to the merged PDF\n",
+        "        pdf_merger.append('temp.pdf')\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error appending {pdf_link}: {e}\")\n",
+        "\n",
+        "# Write the merged PDF to the output file\n",
+        "with open(output_pdf, 'wb') as output_file:\n",
+        "    pdf_merger.write(output_file)\n",
+        "\n",
+        "print(f'Collage PDF saved as {output_pdf}')\n"
+      ],
+      "metadata": {
+        "id": "7KZp0dbawLjx"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
