--- a/ExerciseDifficultyClassifierNN.ipynb
+++ b/ExerciseDifficultyClassifierNN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjvEGWk/n7JU97kop7fg12",
+      "authorship_tag": "ABX9TyPD7v4GRnVzGFjo/yiEafo0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,36 +76,36 @@
         "from keras.models import Sequential\n",
         "from keras.layers import Embedding, Flatten, Dense\n",
         "\n",
-        "# Load your exercise difficulty data from your CSV file\n",
+        "# Small dataset for exercise difficulty\n",
         "data = pd.read_csv('/content/level_difficulty.csv')\n",
         "\n",
-        "# Encode the difficulty labels to numerical values\n",
+        "# Encoding the difficulty labels to numerical values\n",
         "label_encoder = LabelEncoder()\n",
         "data['difficulty'] = label_encoder.fit_transform(data['difficulty'])\n",
         "\n",
-        "# Tokenize the exercise text\n",
+        "# Tokenizing the exercise text\n",
         "tokenizer = Tokenizer()\n",
         "tokenizer.fit_on_texts(data['description'])\n",
         "X = tokenizer.texts_to_sequences(data['description'])\n",
         "X = pad_sequences(X)\n",
         "\n",
-        "# Split the data into training and testing sets\n",
+        "# Spliting the data into training and testing sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, data['difficulty'], test_size=0.2, random_state=42)\n",
         "\n",
-        "# Create a simple neural network model\n",
+        "# neural network model\n",
         "model = Sequential()\n",
         "model.add(Embedding(input_dim=len(tokenizer.word_index) + 1, output_dim=100, input_length=X.shape[1]))\n",
         "model.add(Flatten())\n",
         "model.add(Dense(units=64, activation='relu'))\n",
         "model.add(Dense(units=3, activation='softmax'))  # 3 output classes (Easy, Medium, Hard)\n",
         "\n",
-        "# Compile the model\n",
+        "# Compiling the model\n",
         "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
-        "# Train the model\n",
+        "# Training the model\n",
         "model.fit(X_train, y_train, epochs=10, batch_size=32, validation_split=0.2)\n",
         "\n",
-        "# Evaluate the model on test data\n",
+        "# Evaluating the model on test data\n",
         "loss, accuracy = model.evaluate(X_test, y_test)\n",
         "print(f\"Test loss: {loss:.4f}, Test accuracy: {accuracy:.4f}\")\n"
       ],
